CMAKE_MINIMUM_REQUIRED(VERSION 2.9)
MESSAGE(STATUS "CMake version: ${CMAKE_VERSION}")

PROJECT(sgeproto)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Debug)
ENDIF()
MESSAGE(STATUS "Build Type ${CMAKE_BUILD_TYPE}")

INCLUDE_DIRECTORIES(../../core)


SET(SGE_PROTO_LIB ${CMAKE_BINARY_DIR}/lib/libsgeextproto.so)
LINK_LIBRARIES(${SGE_PROTO_LIB})

SET(SRC
    lua-sgeproto.c
)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC})
