CMAKE_MINIMUM_REQUIRED(VERSION 2.9)
MESSAGE(STATUS "CMake version: ${CMAKE_VERSION}")

PROJECT(sgeproto)

IF(NOT CMAKE_BUILD_TYPE)
    SET(CMAKE_BUILD_TYPE Debug)
ENDIF()
MESSAGE(STATUS "Build Type ${CMAKE_BUILD_TYPE}")

INCLUDE_DIRECTORIES(../../core)

SET(SRC
    lua-sgeproto.c
)

ADD_LIBRARY(${PROJECT_NAME} SHARED ${SRC})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} sgeextproto)
